# CRM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  _data_migration_template.py  custom_migration_0002_create_superuser_and_groups_with_permissions.py  docker-compose.yml  new_0002_create_superuser_and_groups_with_perms.py  pyproject.toml  requirements-dev.txt  requirements.txt  structure  to_compare_with.py
.github/workflows/: ci.yml
apps/: conftest.py
apps/advertisements/: admin.py  apps.py  filters.py  forms.py  models.py  selectors.py  signals.py  urls.py  views.py
apps/advertisements/migrations/: 0001_initial.py
apps/advertisements/tests/: conftest.py  test_selectors.py  test_views.py
apps/common/: filters.py  mixins.py  models.py  utils.py  validators.py  views.py
apps/common/management/commands/: populate_db.py
apps/common/templatetags/: pagination_tags.py
apps/contracts/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/contracts/migrations/: 0001_initial.py
apps/customers/: admin.py  apps.py  filters.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
apps/customers/migrations/: 0001_initial.py  0002_initial.py
apps/leads/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/leads/migrations/: 0001_initial.py  0002_alter_potentialclient_phone.py  0002_initial.py
apps/leads/tests/: conftest.py  test_views.py
apps/products/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_create_superuser_and_groups.py  0002_create_superuser_and_groups_with_permissions.py
config/: __init__.py  celery.py  settings.py  urls.py
docker/celery/beat/: entrypoint.sh
docker/celery/worker/: entrypoint.sh
docker/clamav/: Dockerfile
docker/django/: Dockerfile  entrypoint.sh  gunicorn.conf.py
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/nginx/: Dockerfile  entrypoint.sh  nginx.conf
docker/prometheus/: prometheus.yml
docker/scripts/: wait-for-services.sh
scripts/: clear_migrations.sh  create_data_migration.sh
static/: main.js  style.css
templates/: 403.html  _base.html
templates/ads/: ads-create.html  ads-delete.html  ads-detail-statistic.html  ads-detail.html  ads-edit.html  ads-list.html  ads-statistic.html
templates/axes/: lockout.html
templates/common/: pagination.html
templates/contracts/: contracts-create.html  contracts-delete.html  contracts-detail.html  contracts-edit.html  contracts-list.html
templates/customers/: customers-create.html  customers-delete.html  customers-detail.html  customers-edit.html  customers-list.html
templates/leads/: leads-create.html  leads-delete.html  leads-detail.html  leads-edit.html  leads-list.html
templates/products/: products-create.html  products-delete.html  products-detail.html  products-edit.html  products-list.html
templates/registration/: login.html
templates/users/: index.html
